# inner-product-sketch

./: CMakeLists.txt  dotprod.ipynb  matrix_product_sketch.h  matrix_product_sketch.ipynb  matrix_product_sketch.py  sparse_recovery.ipynb  sparse_recovery.py  test_matrix_product_sketch.cpp
